--- a/index.html
+++ b/index.html
@@ -1,16 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Css header</title>
+    <title>Primer trimestre</title>
     <link rel='stylesheet' href='css/main.css' type='text/css'/>
   </head>
   <body>
-    <header id='top' class='components'><h1>The header</h1></header>
-    <span id='middle' class='components'>The main content. Practicing css.</span>
+    <header></header>
   </body>
-  <footer id='bottom' class='components'>
-    <form>
-      <button id='ok'>Ok</button><button id='cancel'>Cancel</button>
-    </form>
-  </footer>
 </html>
