Progress day 6 november 2022

--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Primer trimestre</title>
+    <title>El blog del 3ºB</title>
     <link rel='stylesheet' href='css/main.css' type='text/css'/>
+    <meta charset='UTF-8'/>
   </head>
   <body>
-    <header></header>
+    <header>Secciones</header>
+    <h1 id='title'>Este es el primer blog de 3ºB ¡Bienvenido!</h1>
+    <div id='rest'></div>
   </body>
 </html>
